ProjectManagement-FrontEnd/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
@import "tailwindcss";

* {
    font-family: 'Outfit', sans-serif;
}

@custom-variant dark (&:where(.dark, .dark *));

.no-scrollbar::-webkit-scrollbar {
    display: none;
}

@layer base {

    input[type="password"]::-ms-reveal,
    input[type="password"]::-ms-clear {
        display: none;
    }

    button {
        cursor: pointer;
    }

    ::-webkit-scrollbar {
        width: 0.5rem;
    }

    ::-webkit-scrollbar-track {
        background-color: #e5e7eb;
    }

    .dark ::-webkit-scrollbar-track {
        background-color: #1c1c1e;
    }

    ::-webkit-scrollbar-thumb {
        background-color: #bbc3d1;
        border-radius: 0.375rem;
    }

    .dark ::-webkit-scrollbar-thumb {
        background-color: #374151;
    }

    ::-webkit-scrollbar-thumb:hover {
        background-color: #99a5bc;
    }

    .dark ::-webkit-scrollbar-thumb:hover {
        background-color: #4b5563;
    }

    .dark input[type="date"]::-webkit-calendar-picker-indicator {
        filter: invert(100%);
    }

    input[type="checkbox"] {
        appearance: none;
        background-color: #d1d5db;
        border-radius: 9999px;
        cursor: pointer;
        width: 1rem;
        height: 1rem;
    }

    .dark input[type="checkbox"] {
        background-color: #374151;
    }

    input[type="checkbox"]:checked {
        background-color: #3b82f6;
    }
}

